* Shortcuts moved to the embedded WebExtension.
* Context menu moved to the embedded WebExtension.
* Replace bar moved to the embedded WebExtension as a sidebar.
* Enabled translation.
* Fixed bug about the subscription warning not showing sometimes.

v1.1.3 (2017-08-28)
* Corrected a wrong string.
* Added a warning about potential security and privacy issues when using subscription.

v1.1.2 (2017-08-17)
* Fixed another bug in v1.1.0 in which the replace bar didn't follow current preferences.

v1.1.1 (2017-08-17)
* Fixed a bug introduced in v1.1.0 in which the input type was not properly saved.
* Compatibility with Firefox 55 and 56.

v1.1.0 (2017-07-30)
* Substitutions are applied when the main page has loaded, without waiting for other resources.
* Substitutions list and preferences saved in the embedded WebExtension's local storage.
* Options page moved to the embedded WebExtension.
* Subscription and periodic replace functions also moved to the embedded WebExtension.
* Toolbar button also moved to the embedded WebExtension.
* Fixed some errors in initialization.
* Changed the shortcut to apply the substitution list to Ctrl+F9 because Shift+F9 is now used by Firefox.
* Compatibility with Firefox 55.0 and later.

v1.0.0 (2017-03-13)
* Converted to restartless (bootstrapped) addon with embedded WebExtension.
* Made multiprocess compatible.
* Changed license to GPLv3 or later.
* Compatibility with Firefox 51.0a1 and later.

v0.17.3 (2016-09-29)
* Fixed bug introduced in the previous version that manifested itself with textareas with default values (#183).

v0.17.2 (2016-09-27)
* Fixed bug about an innocuous substitution changing the cursor position in some textboxes (#148).
* Fixed bugs related to changes in Firefox 49 (#179, #181).
* Performance improvement (#126).
* Compatibility with Firefox up to 52.

v0.17.1 (2015-11-17)
* Fixed bug about the options window being always opened as a modal dialog.